--- a/admin/css/makewebbetter-onboarding-admin.css
+++ b/admin/css/makewebbetter-onboarding-admin.css
@@ -140,10 +140,10 @@
 	padding: 5px !important;
 	width: 100%;
 	max-height: 44px !important;
-	filter: drop-shadow( 5px 5px 5px #222 );
+	filter: drop-shadow( 2px 2px 2px #c7c7c7 );
 }
 .on-boarding-text-field {
-	filter: drop-shadow( 5px 5px 5px #222 );
+	filter: drop-shadow( 2px 2px 2px #c7c7c7 );
 	padding: 5px !important;
 	width: 100%;
 }
@@ -157,7 +157,7 @@
 	margin:0 10px 0 0 !important;
 }
 .on-boarding-radio-field:checked::before {
-	filter: drop-shadow( 5px 5px 5px #222 );
+	filter: drop-shadow( 2px 2px 2px #c7c7c7 );
 }
 .mwb-on-boarding-radio-wrapper {
 	display: inline-block;
@@ -186,7 +186,7 @@
 }
 .mwb-customer-data-form-single-field .select2-selection__choice {
 	background: #ffffff !important;
-	filter: drop-shadow(5px 5px 5px #222);
+	filter: drop-shadow( 2px 2px 2px #c7c7c7 );
 }
 .mwb-customer-data-form-single-field .select2-search-choice-close {
 	left: 6px !important;
@@ -243,7 +243,7 @@ input#s2id_autogen1 {
 }
 .mwb-on-boarding-submit{
 	border-radius: 3px;
-	filter: drop-shadow( 5px 5px 5px #222 );
+	filter: drop-shadow( 2px 2px 2px #c7c7c7 );
 }
 .mwb-on-boarding-form-verify {
 	margin: 0 20px 0 110px;
