--- a/admin/css/wishlist-for-woo-admin.css
+++ b/admin/css/wishlist-for-woo-admin.css
@@ -4,25 +4,31 @@
  */
 
 
-/* font include start */
+/*===================================
+=            FONT-FAMILY            =
+===================================*/
 
 @font-face {
-    font-family: 'orbitronBold';
-    src: url('../fonts/orbitron/Orbitron-Bold.eot');
-    src: url('../fonts/orbitron/Orbitron-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/orbitron/Orbitron-Bold.woff2') format('woff2'), url('../fonts/orbitron/Orbitron-Bold.woff') format('woff'), url('../fonts/orbitron/Orbitron-Bold.ttf') format('truetype'), url('../fonts/orbitron/Orbitron-Bold.svg#Orbitron-Bold') format('svg');
+    font-family: 'NunitoSans-Bold';
+    src: url('../fonts/nunito/NunitoSans-Bold.eot');
+    src: url('../fonts/nunito/NunitoSans-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/nunito/NunitoSans-Bold.woff2') format('woff2'), url('../fonts/nunito/NunitoSans-Bold.woff') format('woff'), url('../fonts/nunito/NunitoSans-Bold.ttf') format('truetype'), url('../fonts/nunito/NunitoSans-Bold.svg#NunitoSans-Bold') format('svg');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
 
+
 @font-face {
-    font-family: 'orbitronRegular';
-    src: url('../fonts/orbitron/Orbitron-Medium.eot');
-    src: url('../fonts/orbitron/Orbitron-Medium.eot?#iefix') format('embedded-opentype'), url('../fonts/orbitron/Orbitron-Medium.woff2') format('woff2'), url('../fonts/orbitron/Orbitron-Medium.woff') format('woff'), url('../fonts/orbitron/Orbitron-Medium.ttf') format('truetype'), url('../fonts/orbitron/Orbitron-Medium.svg#Orbitron-Medium') format('svg');
-    font-weight: 400;
+    font-family: 'NunitoSans-Regular';
+    src: url('../fonts/nunito/NunitoSans-Regular.eot');
+    src: url('../fonts/nunito/NunitoSans-Regular.eot?#iefix') format('embedded-opentype'), url('../fonts/nunito/NunitoSans-Regular.woff2') format('woff2'), url('../fonts/nunito/NunitoSans-Regular.woff') format('woff'), url('../fonts/nunito/NunitoSans-Regular.ttf') format('truetype'), url('../fonts/nunito/NunitoSans-Regular.svg#NunitoSans-Regular') format('svg');
+    font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
+
+
+/*=====  End of FONT-FAMILY  ======*/
 
 .mwb-wfw-sidebar__links:first-child {
     display: none;
@@ -39,7 +45,8 @@ main.mwb-wfw-main {
 .mwb-wfw-header {
     background-color: #59B0F6;
     display: flex;
-    font-family: 'orbitronBold', sans-serif;
+    font-family: 'NunitoSans-Bold', sans-serif;
+    font-weight:bold;
     justify-content: space-between;
     margin: 0px 0 0 -1px;
     padding: 15px;
@@ -117,7 +124,8 @@ a.mwb-wfw-cta {
 
 .mwb-wfw-nav li a {
     color: #59B0F6;
-    font-family: 'orbitronBold', sans-serif;
+        font-family: 'NunitoSans-Bold', sans-serif;
+    font-weight:bold;
     font-size: 16px;
     line-height: 24px;
     text-decoration: none;
@@ -197,7 +205,8 @@ a.mwb-wfw-cta {
 
 .mwb-wfw-desc .mwb-wfw-desc--preloader h4 {
     color: #59B0F6;
-    font-family: 'orbitronRegular', sans-serif;
+        font-family: 'NunitoSans-Regular', sans-serif;
+    font-weight:normal;
     letter-spacing: 2px;
 }
 
@@ -246,7 +255,8 @@ a.mwb-wfw-cta {
 
 .mwb-wfw-sidebar h2 {
     color: #59B0F6;
-    font-family: 'orbitronBold', sans-serif;
+        font-family: 'NunitoSans-Bold', sans-serif;
+    font-weight:bold;
     margin: 0px 0 30px 0;
     text-align: center;
     text-transform: capitalize;
@@ -266,7 +276,8 @@ a.mwb-wfw-cta {
     box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
     color: #59B0F6;
     display: flex;
-    font-family: 'orbitronRegular', sans-serif;
+        font-family: 'NunitoSans-Regular', sans-serif;
+    font-weight:normal;
     font-size: 11px;
     justify-content: center;
     padding: 10px 15px;
@@ -294,13 +305,14 @@ a.mwb-wfw-cta {
 }
 
 .mwb-wfw-sidebar__connect a {
-    font-family: 'orbitronRegular', sans-serif;
+        font-family: 'NunitoSans-Regular', sans-serif;
+    font-weight:normal;
     text-decoration: none;
     text-transform: capitalize;
     color: #59B0F6;
     font-weight: 600;
     letter-spacing: 2px;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .mwb-wfw-sidebar__connect .mwb-wfw-skype__icon {
@@ -369,7 +381,8 @@ a.mwb-wfw-cta {
 
 
 ::placeholder {
-    font-family: 'orbitronRegular', sans-serif;
+        font-family: 'NunitoSans-Regular', sans-serif;
+    font-weight:normal;
     color: #59B0F6;
 }
 
@@ -384,7 +397,8 @@ a.mwb-wfw-cta {
 .mwb-wfw_save-wrapper a,
 h2.mwb-wfw-subheading,
 .mwb-wfw_save-text {
-    font-family: 'orbitronRegular', sans-serif;
+        font-family: 'NunitoSans-Regular', sans-serif;
+    font-weight:bold;
     letter-spacing: 2px;
 }
 
@@ -496,7 +510,7 @@ h2.mwb-wfw-subheading {
 }
 
 .mwb-wfw-textarea-field {
-    font-size: 12px;
+    font-size: 14px;
     width: 100%;
     border: #ffffff;
     border-radius: 0;
@@ -510,8 +524,9 @@ h2.mwb-wfw-subheading {
 .mwb-wfw-output-form input[type=password],
 .mwb-wfw-output-form input[type=text],
 .mwb-wfw-output-form .select2-container {
-    font-family: 'orbitronRegular', sans-serif;
-    font-size: 12px;
+        font-family: 'NunitoSans-Regular', sans-serif;
+    font-weight:normal;
+    font-size: 14px;
     border: none;
     max-width: unset;
     width: 100% !important;
@@ -604,7 +619,7 @@ h2.mwb-wfw-subheading {
     flex: 0 0 246px;
     padding-right: 10px;
     padding-bottom: 25px;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .mwb-wfw-output-form tr>td {
@@ -632,7 +647,7 @@ h2.mwb-wfw-subheading {
 }
 
 .mwb-wfw-output-form .wp-picker-container>button>span {
-    font-size: 12px;
+    font-size: 14px;
     letter-spacing: 1px;
     background-color: unset;
     border: none;
@@ -823,7 +838,8 @@ span.woocommerce-help-tip-text.wishlist-page-label {
 }
 
 .wfw_crm_config_options_icon h3 {
-    font-family: 'orbitronRegular', sans-serif;
+        font-family: 'NunitoSans-Regular', sans-serif;
+    font-weight:normal;
     font-size: 26px;
     letter-spacing: 2px;
     font-weight: 600;
@@ -835,7 +851,8 @@ span.woocommerce-help-tip-text.wishlist-page-label {
 }
 
 .wfw_crm_config_options_icon li {
-    font-family: 'orbitronRegular', sans-serif;
+        font-family: 'NunitoSans-Regular', sans-serif;
+    font-weight:normal;
     list-style-type: square;
     color: #3a3a3a;
     text-align: left;
@@ -848,7 +865,8 @@ span.woocommerce-help-tip-text.wishlist-page-label {
         OVERVIEW PAGE STYLING
 =========================================*/
 .wfw-overview_wrapper {
-    font-family: 'orbitronRegular', sans-serif;
+        font-family: 'NunitoSans-Regular', sans-serif;
+    font-weight:normal;
     letter-spacing: 2px;
     line-height: 1.25;
 }
@@ -859,7 +877,7 @@ span.woocommerce-help-tip-text.wishlist-page-label {
 }
 
 .wfw-overview_wrapper p {
-    font-size: 12px;
+    font-size: 14px;
     color: #4d4d4d;
 }
 
@@ -1023,7 +1041,7 @@ h4 {
     }
 
     .mwb-wfw-output-form .mwb-wfw-subheading {
-        font-size: 12px;
+        font-size: 14px;
         padding: 9px;
     }
 
